--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "dating app for pokemon lovers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.31.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [
+    "pickmemon"
+  ]
 }
