--- a/app/config/config.json
+++ b/app/config/config.json
@@ -30,7 +30,7 @@
  
     "production": {
  
-        "use_env_variable":"JawsDB_URL,
+        "use_env_variable":"JawsDB_URL",
  
         "dialect": "mysql"
  
